[gd_scene load_steps=13 format=3 uid="uid://bkjs7hge7372k"]

[ext_resource type="Script" uid="uid://cepd6vn07wyx5" path="res://src/player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://dwqv65m8ieqgg" path="res://addons/finite_state_machine/scripts/state_machine.gd" id="2_jiejy"]
[ext_resource type="Texture2D" uid="uid://cvty80gflg4u5" path="res://icon.svg" id="2_rkbax"]
[ext_resource type="Script" uid="uid://cf0ws2lij73so" path="res://addons/MultiplayCore/synchronizers/MPTransformSync.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://dnsh2hhlovbxw" path="res://src/player/components/states/movement_state.gd" id="3_jiejy"]
[ext_resource type="Script" uid="uid://da7bm1n6ciq12" path="res://src/player/components/states/stuck_state.gd" id="4_o822w"]
[ext_resource type="Script" uid="uid://bmnoykt41qebx" path="res://src/player/components/platform_connect_component.gd" id="4_yw30f"]

[sub_resource type="Gradient" id="Gradient_g1dw6"]
colors = PackedColorArray(0, 0, 0, 1, 1, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yw30f"]
gradient = SubResource("Gradient_g1dw6")

[sub_resource type="CircleShape2D" id="CircleShape2D_yw30f"]
radius = 55.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_g1dw6"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_g1dw6"]
radius = 58.0

[node name="player" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 0.0
floor_max_angle = 3.14159
script = ExtResource("1_oul6g")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "debug_draw")]
process_mode = 4
script = ExtResource("2_jiejy")
current_state = NodePath("MovementState")
debug_draw = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://dwqv65m8ieqgg"

[node name="MovementState" type="Node" parent="StateMachine"]
script = ExtResource("3_jiejy")
speed = 600.0
metadata/_custom_type_script = "uid://dnsh2hhlovbxw"

[node name="StuckState" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement_state")]
script = ExtResource("4_o822w")
movement_state = NodePath("../MovementState")
speed = 600.0
metadata/_custom_type_script = "uid://da7bm1n6ciq12"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rkbax")

[node name="player_name" type="Label" parent="Sprite2D"]
anchors_preset = -1
anchor_left = 0.512
anchor_top = -0.27
anchor_right = 0.512
anchor_bottom = -0.27
offset_left = -132.536
offset_top = -98.44
offset_right = 4.464
offset_bottom = -29.44
theme_override_font_sizes/font_size = 50
text = "name"
horizontal_alignment = 1

[node name="MPTransformSync" type="Node" parent="."]
script = ExtResource("3_g1dw6")
sync_scale = true
metadata/_custom_type_script = "uid://cf0ws2lij73so"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Debug" type="Node2D" parent="."]

[node name="db1" type="Sprite2D" parent="Debug"]
scale = Vector2(1, 20.5)
texture = SubResource("GradientTexture1D_yw30f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yw30f")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_g1dw6")

[node name="PC component" type="Area2D" parent="." node_paths=PackedStringArray("player", "stuck_state")]
collision_layer = 0
script = ExtResource("4_yw30f")
player = NodePath("..")
stuck_state = NodePath("../StateMachine/StuckState")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PC component"]
shape = SubResource("CircleShape2D_g1dw6")

[node name="GroundRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 150)
collide_with_areas = true
